--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.4.RELEASE</version>
+        <version>2.5.0</version> <!-- Updated Spring Boot version -->
     </parent>
 
     <properties>
@@ -56,7 +56,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version> <!-- Updated Maven Compiler Plugin version -->
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
