--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -25,7 +25,7 @@ pipeline {
         // Debug step to check Java version
         sh 'java -version'
         // Debug step to check Maven version
-        sh 'mvn -version'
+        //sh 'mvn -version'
         sh 'ls -ltr'
         // Build the project and create a JAR file
         sh 'cd argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
