--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -24,6 +24,8 @@ pipeline {
         // Debug step to check Maven version
         sh 'mvn -version'
         sh 'ls -ltr'
+        // Debug step to print current working directory
+        sh 'pwd'
         // Build the project and create a JAR file
         sh 'cd argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
       }
