--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -67,6 +67,7 @@ pipeline {
           sh '''
             echo "Current directory: $(pwd)"
             ls -la
+            cd argocd/java-maven-sonar-argocd-helm-k8s
             git config user.email "abc123@gmail.com"
             git config user.name "abc123"
             BUILD_NUMBER=${BUILD_NUMBER}
