--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -67,7 +67,8 @@ pipeline {
           sh '''
             echo "Current directory: $(pwd)"
             ls -la
-            cd argocd/java-maven-sonar-argocd-helm-k8s
+            sh 'cd argocd/java-maven-sonar-argocd-helm-k8s'
+            echo "ACurrent directory: $(pwd)"
             git config user.email "abc123@gmail.com"
             git config user.name "abc123"
             BUILD_NUMBER=${BUILD_NUMBER}
