--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      //image 'abhishek976772/maven-abhishek-docker-agent:v4'
+      //image 'abhishek976772/maven-abhishek-docker-agent:v5'
       image 'abhishek976772/spring-boot-app:v4'
       args '--entrypoint="" -u root -v /var/run/docker.sock:/var/run/docker.sock'
     }
@@ -67,7 +67,7 @@ pipeline {
           sh '''
             echo "Current directory: $(pwd)"
             ls -la
-            sh 'cd argocd/java-maven-sonar-argocd-helm-k8s'
+            //sh 'cd argocd/java-maven-sonar-argocd-helm-k8s'
             echo "ACurrent directory: $(pwd)"
             git config user.email "abc123@gmail.com"
             git config user.name "abc123"
