--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -63,7 +63,8 @@ pipeline {
       steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
           sh '''
-            sh 'cd argocd'
+            echo "beforeCurrent directory: $(pwd)"
+            cd argocd
             echo "Current directory: $(pwd)"
             ls -la
             git config user.email "abc123@gmail.com"
