--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -66,6 +66,10 @@ pipeline {
             echo "beforeCurrent directory: $(pwd)"
             echo "Current directory: $(pwd)"
             ls -la
+            # Initialize Git repository if not already initialized
+            if [ ! -d ".git" ]; then
+              git init
+            fi
             git config user.email "abc123@gmail.com"
             git config user.name "abc123"
             BUILD_NUMBER=${BUILD_NUMBER}
