--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -74,8 +74,10 @@ pipeline {
               echo ".git directory does not exist, initializing Git repository"
               git init
             fi
-            git config user.email "abc123@gmail.com"
-            git config user.name "abc123"
+            # Ensure all Git commands are executed within the correct directory
+            echo "After initilizeCurrent directory: $(pwd)"
+            git config --local user.email "abc123@gmail.com"
+            git config --local user.name "abc123"
             BUILD_NUMBER=${BUILD_NUMBER}
             sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
             git add deployment.yml
