--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -65,7 +65,7 @@ pipeline {
           sh '''
             echo "beforeCurrent directory: $(pwd)"
             cd argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
-            echo "Current directory: $(pwd)"
+            echo "Current directory after cd: $(pwd)"
             ls -la
             # Check if .git directory exists
             if [ -d ".git" ]; then
@@ -74,10 +74,18 @@ pipeline {
               echo ".git directory does not exist, initializing Git repository"
               git init
             fi
+            # Verify .git directory exists after initialization
+            if [ -d ".git" ]; then
+              echo ".git directory exists after initialization"
+            else
+              echo "Failed to initialize .git directory"
+              exit 1
+            fi
             # Ensure all Git commands are executed within the correct directory
-            echo "After initilizeCurrent directory: $(pwd)"
+            echo "Configuring Git user email and name"
             git config --local user.email "abc123@gmail.com"
             git config --local user.name "abc123"
+            echo "Git user email and name configured"
             BUILD_NUMBER=${BUILD_NUMBER}
             sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
             git add deployment.yml
