--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -81,6 +81,7 @@ pipeline {
                 exit 1
               fi
               # Ensure all Git commands are executed within the correct directory
+              cd argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
               echo "Configuring Git user email and name"
               git config user.email "abc123@gmail.com"
               git config user.name "abc123"
