--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,6 +1,7 @@
 pipeline {
   agent {
     docker {
+      //image 'abhishek976772/maven-abhishek-docker-agent:v4'
       image 'abhishek976772/spring-boot-app:v4'
       args '--entrypoint="" -u root -v /var/run/docker.sock:/var/run/docker.sock'
     }
@@ -27,6 +28,7 @@ pipeline {
         // Debug step to print current working directory
         sh 'pwd'
         // Build the project and create a JAR file
+        //sh 'docker -version'
         sh 'cd argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
       }
     }
@@ -62,37 +64,18 @@ pipeline {
       }
       steps {
         withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-          dir('argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests') {
-            sh '''
-              echo "Current directory: $(pwd)"
-              ls -la
-              # Check if .git directory exists
-              if [ -d ".git" ]; then
-                echo ".git directory exists"
-              else
-                echo ".git directory does not exist, initializing Git repository"
-                git init
-              fi
-              # Verify .git directory exists after initialization
-              if [ -d ".git" ]; then
-                echo ".git directory exists after initialization"
-              else
-                echo "Failed to initialize .git directory"
-                exit 1
-              fi
-              echo "Configuring Git user email and name"
-              git config --global user.email "abc123@gmail.com"
-              git config --global user.name "abc123"
-              echo "Git user email and name configured"
-              git config --global --add safe.directory /var/lib/jenkins/workspace/Argocd_pipeline/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
-              BUILD_NUMBER=${BUILD_NUMBER}
-              sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
-              git add deployment.yml
-              git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-              git pull https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} main --rebase
-              git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
-            '''
-          }
+          sh '''
+            cd ${GIT_REPO_NAME}
+            echo "Current directory: $(pwd)"
+            ls -la
+            git config user.email "abc123@gmail.com"
+            git config user.name "abc123"
+            BUILD_NUMBER=${BUILD_NUMBER}
+            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+            git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
+          '''
         }
       }
     }
