--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -81,8 +81,8 @@ pipeline {
                 exit 1
               fi
               echo "Configuring Git user email and name"
-              git config --global user.email "abc123@gmail.com"
-              git config --global user.name "abc123"
+              git config --global user.email "ajaykumart797@gmail.com"
+              git config --global user.name "ajaykumart797"
               echo "Git user email and name configured"
               git config --global --add safe.directory /var/lib/jenkins/workspace/Argocd_pipeline/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
               BUILD_NUMBER=${BUILD_NUMBER}
