--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -88,9 +88,13 @@ pipeline {
               BUILD_NUMBER=${BUILD_NUMBER}
               sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
               git add deployment.yml
-              git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-              git pull https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} main --rebase
-              git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
+              if git status | grep -q "Changes to be committed"; then
+                git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                git pull https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} main --rebase
+                git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
+              else
+                echo "No changes to commit"
+              fi
             '''
           }
         }
