--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -86,10 +86,14 @@ pipeline {
               echo "Git user email and name configured"
               git config --global --add safe.directory /var/lib/jenkins/workspace/Argocd_pipeline/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
               BUILD_NUMBER=${BUILD_NUMBER}
-              sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
-              git add deployment.yml
-              git commit -o deployment.yml -m "Update deployment image to version ${BUILD_NUMBER}"
-              git pull https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} main --rebase
+              echo "Before sed:"
+              cat argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              sed -i "s/abhishekf5\\/ultimate-cicd:[0-9]*/abhishekf5\\/ultimate-cicd:${BUILD_NUMBER}/g" argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              echo "After sed:"
+              cat argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              git add argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              git diff argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              git commit -m "Update deployment image to version ${BUILD_NUMBER}"
               git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
             '''
           }
