--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -6,6 +6,11 @@ pipeline {
     }
   }
   stages {
+    stage('Clean Workspace') {
+      steps {
+        deleteDir() // This will delete all files in the workspace
+      }
+    }
     stage('Checkout') {
       steps {
         sh 'echo passed'
@@ -87,7 +92,7 @@ pipeline {
               git config --global --add safe.directory /var/lib/jenkins/workspace/Argocd_pipeline/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
               BUILD_NUMBER=${BUILD_NUMBER}
               sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
-    
+              git add deployment.yml
               git commit -m "Update deployment image to version ${BUILD_NUMBER}"
               git pull https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} main --rebase
               git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
