--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -6,11 +6,6 @@ pipeline {
     }
   }
   stages {
-    stage('Clean Workspace') {
-      steps {
-        deleteDir() // This will delete all files in the workspace
-      }
-    }
     stage('Checkout') {
       steps {
         sh 'echo passed'
@@ -93,7 +88,7 @@ pipeline {
               BUILD_NUMBER=${BUILD_NUMBER}
               sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
               git add deployment.yml
-              git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+              git commit --only deployment.yml -m "Update deployment image to version ${BUILD_NUMBER}"
               git pull https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} main --rebase
               git push https://${GITHUB_TOKEN}@github.com/${GIT_user}/${GIT_REPO_NAME} HEAD:main
             '''
