--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        git branch: 'main', url: 'https://github.com/ajaykumart797/Ultimate_CI-CD_pipeline'
+        git branch: 'main', url: 'https://github.com/ajaykumart797/Ultimate_CI-CD_pipeline.git'
       }
     }
     stage('Check Workspace') {
