--- a/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,6 @@
 pipeline {
   agent {
     docker {
-      //image 'abhishek976772/maven-abhishek-docker-agent:v5'
       image 'abhishek976772/spring-boot-app:v4'
       args '--entrypoint="" -u root -v /var/run/docker.sock:/var/run/docker.sock'
     }
@@ -9,11 +8,8 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {
-
-        //git branch: 'main', url: 'https://github.com/ajaykumart797/Ultimate_CI-CD_pipeline'
-           sh '''
-            git clone https://github.com/ajaykumart797/Ultimate_CI-CD_pipeline.git
-          '''
+        sh 'rm -rf Ultimate_CI-CD_pipeline'
+        sh 'git clone https://github.com/ajaykumart797/Ultimate_CI-CD_pipeline.git'
       }
     }
     stage('Check Workspace') {
@@ -23,15 +19,10 @@ pipeline {
     }
     stage('Build and Test') {
       steps {
-        // Debug step to check Java version
         sh 'java -version'
-        // Debug step to check Maven version
         sh 'mvn -version'
         sh 'ls -ltr'
-        // Debug step to print current working directory
         sh 'pwd'
-        // Build the project and create a JAR file
-        //sh 'docker -version'
         sh 'cd argocd/java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
       }
     }
